Move Factory to src